@@ -1,3 +1,10 @@
+2010-04-23  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[int] Tighten ‘InitAdmin’.
+
+	* rcsfnms.c (bindex, suffix_matches): Delete func.
+	(InitAdmin): Use ‘strrchr’, ‘strcasecmp’.
+
 2010-04-22  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int] Use tinysym for parsing "RCS file keywords".
